fixes bug with tooltip not showing on newly created locals

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1100,7 +1100,7 @@ a,
     }
 
     // Elements that are animated when modal opens 
-    .photo-container, .modal-body > div, .modal-footer {
+    .photo-container, .modal-body > div:not(.tooltip), .modal-footer {
         opacity: 0;
     }
 
